@@ -1,6 +1,4 @@
-- tiled tiff save won't cancel
 
-- tiled tiff im_open() seems to decompress to ram? fix before benchmarking
 
 
 - add params
